--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="https://www.facebook.com/aron.castro.35912"><ion-icon name="logo-facebook"></ion-icon></a>
             <a href="https://www.instagram.com/khjh_yow/"><ion-icon name="logo-instagram"></ion-icon></a>
             <a href="https://github.com/kajohnbytr"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://discord.gg/MgeMXfUU"><ion-icon name="logo-discord"></ion-icon></a>
         </div>
     </div>
 
