--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <div class="main">
         <div class="navbar">
-            <img src="logo.PNG" class="logo">
+            <img src="AR.png" class="logo">
 
             <ul>
                 <li><a href="#">HOME</a></li>
