--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/html/index.css">
-    <script src="/html/index.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
     
 </head>
 <body class="bg-dark-bg font-poppins">
