--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 </p>
                 
                 <div class="flex flex-wrap justify-center mt-10 gap-4">
-                    <a href="#" class="neon-button w-14 h-14 rounded-full flex items-center justify-center text-xl">
+                    <a href="https://www.github.com/kajohnbytr" class="neon-button w-14 h-14 rounded-full flex items-center justify-center text-xl">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="neon-button w-14 h-14 rounded-full flex items-center justify-center text-xl">
+                    <a href="https://www.linkedin.com/in/john-aaron-castro-junio-8959b52a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="neon-button w-14 h-14 rounded-full flex items-center justify-center text-xl">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="#" class="neon-button w-14 h-14 rounded-full flex items-center justify-center text-xl">
