--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <p class="text-xl opacity-80 mb-8">Creating secure, innovative, and user-centered digital solutions.</p>
             
             <div class="flex justify-center space-x-4">
-                <a href="#" class="neon-button px-6 py-3 rounded-full font-medium">View Projects</a>
-                <a href="#" class="neon-button px-6 py-3 rounded-full font-medium">Contact Me</a>
+                <a href="#projects" class="neon-button px-6 py-3 rounded-full font-medium">View Projects</a>
+                <a href="#contact" class="neon-button px-6 py-3 rounded-full font-medium">Contact Me</a>
             </div>
         </div>
         
